--- a/index.html
+++ b/index.html
@@ -70,12 +70,28 @@
         <li class="nav-item"> <a class="nav-link" href="#">Travel</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#">Health</a> </li>
       </ul>
+      <form class="pull-xs-right">
+
+    
+
+    <div class="search">
+          <input type="text" class="form-control" maxlength="64" placeholder="Search" />
+          <button type="submit" class="btn btn-search"><i class="fa fa-search"></i></button>
+        </div>
+    </form>
+      <!--
             <form class="pull-xs-right">
+
+  <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2"> <a class="navbar-brand" href="#">Responsive navbar</a>
+
+
         <div class="search">
                 <input type="text" class="form-control" maxlength="64" placeholder="Search" />
                 <button type="submit" class="btn btn-search"><i class="fa fa-search"></i></button>
               </div>
       </form>
+</div>
+    -->
           </div>
   </div>
       </nav>
