ajout de je sais pas quoi
:+1:

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
       <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <title>River Bootstrap 4 Template by Grafreez</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="assets/ico/favicon.png">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="author" content="Aloïs Marcellin" />
+        <meta name="copyright" content="© Marcellin" />
+
+        <meta name="description" content="Gamespell Actualité des jeux vidéo, tests, previews, images et vidéos de jeux, astuces et soluces. Objet et actualités Geek." />
+
+
+
+
+      <title>GameSpell - Jeux vidéo PC et consoles: tout l’univers des joueurs</title>
 
       <!--Bootstrap core CSS-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +82,7 @@
       </ul>
       <form class="pull-xs-right">
 
-    
+
 
     <div class="search">
           <input type="text" class="form-control" maxlength="64" placeholder="Search" />
@@ -590,22 +600,7 @@
       </footer>
 <!--footer start from here-->
 
-<div class="copyright">
-        <div class="container">
-    <div class="col-lg-6 col-md-4">
-            <p>© 2016 - <a href="http://grafreez.com">Grafreez.com</a></p>
-          </div>
-    <div class="col-lg-6 col-md-8">
-            <ul class="bottom_ul">
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Faq's</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">Site Map</a></li>
-      </ul>
-          </div>
-  </div>
-      </div>
+
 
 <!-- Bootstrap core JavaScript
     ================================================== -->
