--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
       <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,8 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="assets/ico/favicon.png">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="author" content="Aloïs Marcellin" />
-        <meta name="copyright" content="© Marcellin" />
+        <meta name="author" content="Moi" />
+        <meta name="copyright" content="©Moi" />
 
         <meta name="description" content="Gamespell Actualité des jeux vidéo, tests, previews, images et vidéos de jeux, astuces et soluces. Objet et actualités Geek." />
 
